<resources>
    <string name="app_name">SawaChats</string>
    <string name="action_settings">Settings</string>
    <string name="nickname">NickName</string>
    <string name="password">Password</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
